// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing graphql resquest user QUERY user Testing users() should get all users because not authenticated as administrator 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Sorry, you need to be an administrator to do that.],
  ],
}
`;

exports[`Testing graphql resquest user QUERY user Testing users() should not get all users because not authenticated 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Sorry, you need to be authenticated to do that.],
  ],
}
`;
